uhu: Use BOOTFILES_DIR_NAME variable in config
Signed-off-by: Otavio Salvador <otavio@ossystems.com.br>

--- a/uhu/raspberrypi3.uhupkg.config
+++ b/uhu/raspberrypi3.uhupkg.config
@@ -12,7 +12,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/bootcode.bin",
+                "filename": "$BOOTFILES_DIR_NAME/bootcode.bin",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -52,7 +52,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/config.txt",
+                "filename": "$BOOTFILES_DIR_NAME/config.txt",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -62,7 +62,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -72,7 +72,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start_cd.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start_cd.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -82,7 +82,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start_db.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start_db.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -92,7 +92,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start_x.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start_x.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -102,7 +102,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -112,7 +112,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup_cd.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup_cd.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -122,7 +122,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup_db.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup_db.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -132,7 +132,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup_x.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup_x.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -164,7 +164,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/bootcode.bin",
+                "filename": "$BOOTFILES_DIR_NAME/bootcode.bin",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -204,7 +204,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/config.txt",
+                "filename": "$BOOTFILES_DIR_NAME/config.txt",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -214,7 +214,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -224,7 +224,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start_cd.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start_cd.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -234,7 +234,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start_db.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start_db.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -244,7 +244,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start_x.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start_x.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -254,7 +254,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -264,7 +264,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup_cd.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup_cd.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -274,7 +274,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup_db.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup_db.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -284,7 +284,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup_x.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup_x.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
