--- a/uhu/raspberrypi4.uhupkg.config
+++ b/uhu/raspberrypi4.uhupkg.config
@@ -32,7 +32,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/bootcode.bin",
+                "filename": "$BOOTFILES_DIR_NAME/bootcode.bin",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -42,7 +42,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/config.txt",
+                "filename": "$BOOTFILES_DIR_NAME/config.txt",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -52,7 +52,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup4cd.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup4cd.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -62,7 +62,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup4.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup4.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -72,7 +72,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup4db.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup4db.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -82,7 +82,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup4x.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup4x.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -92,7 +92,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start4.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start4.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -102,7 +102,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start4cd.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start4cd.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -112,7 +112,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start4db.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start4db.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -122,7 +122,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start4x.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start4x.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -174,7 +174,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/bootcode.bin",
+                "filename": "$BOOTFILES_DIR_NAME/bootcode.bin",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -184,7 +184,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/config.txt",
+                "filename": "$BOOTFILES_DIR_NAME/config.txt",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -194,7 +194,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup4cd.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup4cd.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -204,7 +204,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup4.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup4.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -214,7 +214,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup4db.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup4db.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -224,7 +224,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/fixup4x.dat",
+                "filename": "$BOOTFILES_DIR_NAME/fixup4x.dat",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -234,7 +234,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start4.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start4.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -244,7 +244,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start4cd.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start4cd.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -254,7 +254,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start4db.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start4db.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
@@ -264,7 +264,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "bcm2835-bootfiles/start4x.elf",
+                "filename": "$BOOTFILES_DIR_NAME/start4x.elf",
                 "filesystem": "vfat",
                 "format?": false,
                 "install-condition": "content-diverges",
