--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "updatehub-raspberrypi"
 BBFILE_PATTERN_updatehub-raspberrypi = "^${LAYERDIR}/"
 BBFILE_PRIORITY_updatehub-raspberrypi = "6"
 
-LAYERSERIES_COMPAT_updatehub-raspberrypi = "dunfell"
+LAYERSERIES_COMPAT_updatehub-raspberrypi = "gatesgarth"
 LAYERDEPENDS_updatehub-raspberrypi = "updatehub raspberrypi"
 
 ###
