Add support for raspberrypi0-wifi machine
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>
(cherry picked from commit 9c20b2ead94beb04170d6615e210f0f9e942d0e4)

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -118,3 +118,25 @@ MACHINEOVERRIDES_prepend_raspberrypi4-64 = "updatehub-rpi:"
 
 KERNEL_IMAGETYPE_UBOOT_updatehub-rpi_raspberrypi4-64 ??= "Image"
 UHUPKG_FILES_updatehub-rpi_raspberrypi4-64 ??= "raspberrypi4.wks"
+
+###
+# Configuration for Raspberry Pi Devices
+#
+# UpdateHub settings for raspberrypi0-wifi machine
+MACHINEOVERRIDES_prepend_raspberrypi0-wifi = "updatehub-rpi:"
+
+IMAGE_BOOT_FILES_updatehub-rpi_raspberrypi0-wifi ??= " \
+    ${BOOTFILES_DIR_NAME}/bootcode.bin;bootcode.bin \
+    ${BOOTFILES_DIR_NAME}/config.txt;config.txt \
+    ${BOOTFILES_DIR_NAME}/fixup.dat;fixup.dat \
+    ${BOOTFILES_DIR_NAME}/fixup_cd.dat;fixup_cd.dat \
+    ${BOOTFILES_DIR_NAME}/fixup_db.dat;fixup_db.dat \
+    ${BOOTFILES_DIR_NAME}/fixup_x.dat;fixup_x.dat \
+    ${BOOTFILES_DIR_NAME}/start.elf;start.elf \
+    ${BOOTFILES_DIR_NAME}/start_cd.elf;start_cd.elf \
+    ${BOOTFILES_DIR_NAME}/start_db.elf;start_db.elf \
+    ${BOOTFILES_DIR_NAME}/start_x.elf;start_x.elf \
+    bcm2708-rpi-zero-w.dtb \
+    boot.scr-${MACHINE};boot.scr \
+    u-boot.bin;${SDIMG_KERNELIMAGE} \
+"
