conf/layer.conf: Set correct U-Boot providers
u-boot-updatehub-script depends on u-boot-mkimage-native, set all
missing U-Boot providers to avoid duplicated entries in
PREFERRED_PROVIDER variables.

Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -31,6 +31,10 @@ UPDATEHUB_INSTALL_MODE_updatehub-rpi ??= "copy tarball"
 PREFERRED_PROVIDER_u-boot-fw-utils_updatehub-rpi ??= "libubootenv"
 PREFERRED_PROVIDER_u-boot_updatehub-rpi ??= "u-boot"
 PREFERRED_PROVIDER_virtual/bootloader_updatehub-rpi ??= "u-boot"
+PREFERRED_PROVIDER_u-boot-tools-native ??= "u-boot-tools-native"
+PREFERRED_PROVIDER_u-boot-mkimage-native ??= "u-boot-tools-native"
+PREFERRED_PROVIDER_u-boot-mkimage ??= "u-boot-tools"
+PREFERRED_PROVIDER_nativesdk-u-boot-mkimage ??= "nativesdk-u-boot-tools"
 PREFERRED_PROVIDER_u-boot-default-script_updatehub-rpi ??= "u-boot-updatehub-script"
 UPDATEHUB_RUNTIME_PACKAGES_append_updatehub-rpi = " u-boot-default-script u-boot-default-env"
 RPI_USE_U_BOOT_updatehub-rpi = "1"
