Rework uhupkg to use raw mode for installation
We are in the process of adding delta updates and it'll work based on
raw images. During this process, one of demo images we'd like to support
is based on Raspberry Pi devices so start using raw mode for them.

Signed-off-by: Otavio Salvador <otavio@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -17,7 +17,7 @@ LAYERDEPENDS_updatehub-raspberrypi = "updatehub raspberrypi"
 #
 # Setting to use wic image
 WKS_FILE_DEPENDS_updatehub-rpi += "virtual/bootloader"
-IMAGE_FSTYPES_updatehub-rpi ??= "tar.lzma wic.bmap wic.gz"
+IMAGE_FSTYPES_updatehub-rpi ??= "ext4.xz wic.bmap wic.gz"
 WKS_FILES_updatehub-rpi ??= "${MACHINE}.wks updatehub.rpi.wks"
 WKS_SEARCH_PATH_updatehub-rpi ??= "${THISDIR}:${@':'.join('%s/wic' % p for p in '${BBPATH}'.split(':'))}:${@':'.join('%s/scripts/lib/wic/canned-wks' % l for l in '${BBPATH}:${COREBASE}'.split(':'))}"
 
@@ -26,7 +26,7 @@ UPDATEHUB_ACTIVE_INACTIVE_BACKEND_updatehub-rpi ??= "u-boot"
 UPDATEHUB_DEVICE_IDENTITY_updatehub-rpi ??= "cpuinfo-serial"
 UPDATEHUB_FILESYSTEM_SUPPORT_updatehub-rpi ??= "vfat ext4"
 UPDATEHUB_IMAGE_TYPE_updatehub-rpi ??= "active/inactive"
-UPDATEHUB_INSTALL_MODE_updatehub-rpi ??= "copy tarball"
+UPDATEHUB_INSTALL_MODE_updatehub-rpi ??= "copy raw"
 
 PREFERRED_PROVIDER_u-boot-fw-utils_updatehub-rpi ??= "libubootenv"
 PREFERRED_PROVIDER_u-boot_updatehub-rpi ??= "u-boot"
