--- a/uhu/raspberrypi3.uhupkg.config
+++ b/uhu/raspberrypi3.uhupkg.config
@@ -7,7 +7,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/boot.scr",
                 "target-type": "device"
             },
@@ -17,7 +17,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/bootcode.bin",
                 "target-type": "device"
             },
@@ -27,7 +27,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/$SDIMG_KERNELIMAGE",
                 "target-type": "device"
             },
@@ -37,7 +37,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/bcm2710-rpi-3-b.dtb",
                 "target-type": "device"
             },
@@ -47,7 +47,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/bcm2710-rpi-3-b-plus.dtb",
                 "target-type": "device"
             },
@@ -57,7 +57,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/config.txt",
                 "target-type": "device"
             },
@@ -67,7 +67,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/start.elf",
                 "target-type": "device"
             },
@@ -77,7 +77,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/start_cd.elf",
                 "target-type": "device"
             },
@@ -87,7 +87,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/start_db.elf",
                 "target-type": "device"
             },
@@ -97,7 +97,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/start_x.elf",
                 "target-type": "device"
             },
@@ -107,7 +107,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/fixup.dat",
                 "target-type": "device"
             },
@@ -117,7 +117,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/fixup_cd.dat",
                 "target-type": "device"
             },
@@ -127,7 +127,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/fixup_db.dat",
                 "target-type": "device"
             },
@@ -137,19 +137,22 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/fixup_x.dat",
                 "target-type": "device"
             },
             {
-                "filename": "$IMAGE_BASENAME-$MACHINE.tar.lzma",
-                "filesystem": "ext4",
-                "format-options": "-L system_a",
-                "format?": true,
-                "mode": "tarball",
-                "target": "/dev/disk/by-label/system_a",
-                "target-path": "/",
-                "target-type": "device"
+                "chunk-size": 131072,
+                "count": -1,
+                "filename": "$IMAGE_BASENAME-$MACHINE.ext4.xz",
+                "install-condition": "always",
+                "mode": "raw",
+                "seek": 0,
+                "skip": 0,
+                "compressed": true,
+                "target": "/dev/mmcblk0p2",
+                "target-type": "device",
+                "truncate": false
             }
         ],
         [
@@ -159,7 +162,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/boot.scr",
                 "target-type": "device"
             },
@@ -169,7 +172,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/bootcode.bin",
                 "target-type": "device"
             },
@@ -179,7 +182,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/$SDIMG_KERNELIMAGE",
                 "target-type": "device"
             },
@@ -189,7 +192,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/bcm2710-rpi-3-b.dtb",
                 "target-type": "device"
             },
@@ -199,7 +202,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/bcm2710-rpi-3-b-plus.dtb",
                 "target-type": "device"
             },
@@ -209,7 +212,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/config.txt",
                 "target-type": "device"
             },
@@ -219,7 +222,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/start.elf",
                 "target-type": "device"
             },
@@ -229,7 +232,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/start_cd.elf",
                 "target-type": "device"
             },
@@ -239,7 +242,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/start_db.elf",
                 "target-type": "device"
             },
@@ -249,7 +252,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/start_x.elf",
                 "target-type": "device"
             },
@@ -259,7 +262,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/fixup.dat",
                 "target-type": "device"
             },
@@ -269,7 +272,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/fixup_cd.dat",
                 "target-type": "device"
             },
@@ -279,7 +282,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/fixup_db.dat",
                 "target-type": "device"
             },
@@ -289,19 +292,22 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/disk/by-label/boot",
+                "target": "/dev/mmcblk0p1",
                 "target-path": "/fixup_x.dat",
                 "target-type": "device"
             },
             {
-                "filename": "$IMAGE_BASENAME-$MACHINE.tar.lzma",
-                "filesystem": "ext4",
-                "format-options": "-L system_b",
-                "format?": true,
-                "mode": "tarball",
-                "target": "/dev/disk/by-label/system_b",
-                "target-path": "/",
-                "target-type": "device"
+                "chunk-size": 131072,
+                "count": -1,
+                "filename": "$IMAGE_BASENAME-$MACHINE.ext4.xz",
+                "install-condition": "always",
+                "mode": "raw",
+                "seek": 0,
+                "skip": 0,
+                "compressed": true,
+                "target": "/dev/mmcblk0p3",
+                "target-type": "device",
+                "truncate": false
             }
         ]
     ],
